# eds/rest_app/api.yaml
@@ -9,21 +9,19 @@ basePath: /eds
 paths:
   /devices:
     get:
-      #operationId: api.devices.get
       parameters:
        - in: query
-         name: name
+         name: servicename
          type: string
          enum: ["ZigBeeIPE", "MemsIPE"]
-         description: "Enter sensor device name here."
-         #required: true
-       #- in: query
-        # name: id
-       #  type: string
-        # enum: ["MEMS01", "ZBS122S000000"]
-        # example: MEMS01
-        # description: "Enter sensor device ID here."
-         #required: true
+         description: "Enter sensor service name here."
+         required: true
+
+      # - in: query
+       #  name: id
+      #   type: string
+       #  description: "Enter sensor device ID here."
+      #   required: true
       responses:
         '200':
           description: 'Fetch a list of devices'
@@ -44,64 +42,51 @@ paths:
         #  description: 'List of device'
 
 
-  /devices/{name}:
+  '/devices/{id}':
     put:
-      #operationId: api.devices.put
       parameters:
         - in: body
-          name: name
+          name: servicename
           required: true
           schema:
             $ref: '#/definitions/Device'
+
         - in: path
-          name: name
+          name: id
           required: true
           type: string
-
-
       responses:
         '200':
           description: 'Update a device by ID'
     delete:
       parameters:
         - in: path
-          name: name
+          name: id
           required: true
           type: string
-          enum: ["ZigBeeIPE", "MemsIPE"]
+          #enum: ["ZigBeeIPE", "MemsIPE"]
       responses:
         '204':
           description: 'Delete a device by device name'
     get:
       parameters:
         - in: path
-          name: name
+          name: id
           required: true
           type: string
-          enum: ["ZigBeeIPE", "MemsIPE"]
+         # enum: ["ZigBeeIPE", "MemsIPE"]
       responses:
         '200':
           description: 'Fetch a device by ID'
           schema:
             $ref: '#/definitions/Device'
 definitions:
-  DeviceRegistration:
+ Device:
     type: object
     properties:
-      name:
+      servicename:
        type: string
        example: "MemsIPE"
-
-      device:
-       $ref: '#/definitions/Device'
-
-
-  Device:
-    type: object
-    properties:
-      #name:
-      # type: string
-       #example: "MemsIPE"
 
       mems:
         $ref: '#/definitions/Mems'
@@ -110,18 +95,40 @@ definitions:
       registered:
         type: string
         format: date-time
+       #
+ #DeviceRegistration:
+    #type: object
+  #  properties:
+      #servicename:
+       #type: string
+       #example: "MemsIPE"
+   #   id:
+     #   type: string
+    #    example: "MEM01"
+
+#      device:
+ #      $ref: '#/definitions/Device'
 
 
-  Mems:
+
+
+ Mems:
     type: object
     properties:
-        x:
-          $ref: '#/definitions/X'
-        y:
-          $ref: '#/definitions/Y'
-        z:
-          $ref: '#/definitions/Z'
-  X:
+        id:
+          type: string
+          example: "Mem01"
+        axis:
+          type: object
+          properties:
+            x:
+             $ref: '#/definitions/X'
+            y:
+             $ref: '#/definitions/Y'
+            z:
+             $ref: '#/definitions/Z'
+
+ X:
       type: object
       properties:
         bn:
@@ -149,7 +156,7 @@ definitions:
       description: ok
 
 
-  Y:
+ Y:
       type: object
       properties:
         bn:
@@ -176,7 +183,7 @@ definitions:
           example: "openmtc:sensor_data"
       description: ok
 
-  Z:
+ Z:
       type: object
       properties:
         bn:
